<resources>
    <string name="app_name">m-transaksi</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="create_new_account">Create New Account</string>
    <string name="submit">Submit</string>
    <string name="registrasi_your_account">Registrasi Your Account</string>
    <string name="login_text">Login</string>
    <string name="back_login">Already Have Account ? Login Here</string>
    <string name="welcome">Selamat Datang</string>
    <string name="barang_tersedia">Barang Yang Tersedia</string>
    <string name="uploud_barang_baru">Uploud Barang Baru</string>
    <string name="nama_barang_up">Nama Barang</string>
    <string name="stok_barang_up">Stok Barang</string>
    <string name="harga_barang_up">Harga Barang</string>
    <string name="id_admin_up">ID Admin</string>
    <string name="uploud_data_up">Uploud Data</string>
</resources>