<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/sign"
    android:padding="50dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:padding="9dp"
        android:background="@color/white"
        android:inputType="text"
        android:autofillHints="@string/username"
        android:drawableStart="@drawable/ic_username"
        android:id="@+id/etIDLogin"
        android:hint="Id"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginTop="390dp"
        android:layout_marginBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:padding="10dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_password"
        android:drawableEnd="@drawable/ic_show"
        android:id="@+id/etPasswordLogin"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_marginTop="15dp"
        android:id="@+id/btnLogin"
        android:layout_gravity="center"
        android:paddingHorizontal="50dp"
        android:paddingVertical="8dp"
        android:textSize="20sp"
        android:textAllCaps="false"
        app:cornerRadius="15dp"
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

<!--    <TextView-->
<!--        android:id="@+id/tvForgetPassword"-->
<!--        android:text="@string/forgot_password"-->
<!--        android:textSize="15sp"-->
<!--        android:gravity="center"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:onClick="clickForgotPassword"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"/>-->

    <TextView
        android:textColor="@color/white"
        android:id="@+id/tvCreateAccount"
        android:textSize="15dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/create_new_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
