<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:text="@string/registrasi_your_account"
        android:textSize="30dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:drawableStart="@drawable/ic_username"
        android:id="@+id/Id_pegawai"
        android:hint="ID Admin"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:drawableStart="@drawable/ic_username"
        android:id="@+id/tiFullName"
        android:hint="Full Name"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <EditText
        android:autofillHints="password"
        android:drawableStart="@drawable/ic_password"
        android:id="@+id/tiPassword"
        android:hint="Password"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:drawableStart="@drawable/ic_telphone"
        android:id="@+id/tiNoHP"
        android:hint="Nomor Telphone"
         android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnSubmit"
        android:onClick="clickSubmit"
        android:textStyle="bold"
        android:textSize="15dp"
        android:layout_marginTop="25dp"
        app:cornerRadius="15dp"
        android:layout_gravity="center"
        android:text="@string/submit"
        android:layout_width="150dp"
        android:layout_height="60dp"/>

    <TextView
        android:id="@+id/tvBacktoLogin"
        android:textSize="15dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/back_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>